# NeuralGPU

./: CMakeLists.txt  FNN Test Beds CUDA.sln
FNN Test Beds CUDA/: FNN Test Beds CUDA.vcxproj  Inputs.txt  Neuron.cu  Neuron.h  Outputs.txt  Predictions.txt  dot_adder.cu  dot_adder.h  idx.cu  idx.h  kernel.cu  test  threads.cu  threads.h  tt.py  usableLib.cpp  usableLib.h
